# perfin

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 20260705_0001_initial_schema.py
src/perfin/: __init__.py  __main__.py  config.py  secrets.py
src/perfin/agent/: client.py  loop.py  prompts.py  tools.py
src/perfin/analytics/: affordability.py  networth.py  retirement.py  savings.py  spending.py
src/perfin/cli/: app.py  render.py
src/perfin/core/: finance_service.py  models.py  profile_service.py  sync_service.py
src/perfin/datasources/: base.py  csv_source.py  fake_source.py  plaid_source.py
src/perfin/storage/: base.py  db.py  orm.py  repositories.py
tests/: test_phase1.py  test_phase2_phase3.py  test_phase4_agent.py  test_phase5_csv.py
